added homepage module and gots a lots verkin

--- a/sites/all/themes/clim/sass/_cirro.sass
+++ b/sites/all/themes/clim/sass/_cirro.sass
@@ -80,3 +80,39 @@
 		
 //  Purrrdy Stuff
 // ----------------------------------------------------------------------------
+
+#main-menu 
+	position: fixed
+	top: 20px
+	left: 20px
+	z-index: 600
+
+
+.content-section
+	height: 1200px
+	margin: 500px 0 
+	border-bottom: 1px dotted
+	background: white
+
+#bg-slider
+	position: fixed
+	top: 0
+	left: 0
+	width: 100%
+	height: 100%
+	overflow: hidden
+	background-color: black
+	z-index: 300
+	img
+		width: 100%
+
+#main-content
+	position: absolute
+	height: 100%
+	width: 100%
+	display: block
+	z-index: 500
+
+#map_canvas
+	min-height: 700px
+
