--- a/sites/all/themes/clim/css/main.css
+++ b/sites/all/themes/clim/css/main.css
@@ -1599,6 +1599,17 @@ a.label:hover, a.badge:hover { color: white; text-decoration: none; cursor: poin
 .page-user .container { margin-top: 20%; }
 .page-user #forgot { font-size: 12px; font-weight: 300; }
 
+#main-menu { position: fixed; top: 20px; left: 20px; z-index: 600; }
+
+.content-section { height: 1200px; margin: 500px 0; border-bottom: 1px dotted; background: white; }
+
+#bg-slider { position: fixed; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; background-color: black; z-index: 300; }
+#bg-slider img { width: 100%; }
+
+#main-content { position: absolute; height: 100%; width: 100%; display: block; z-index: 500; }
+
+#map_canvas { min-height: 700px; }
+
 .clearfix { *zoom: 1; }
 .clearfix:before { display: table; line-height: 0; content: ""; }
 .clearfix:after { display: table; line-height: 0; content: ""; clear: both; }
