css for bg image

--- a/sites/all/themes/clim/sass/_cirro.sass
+++ b/sites/all/themes/clim/sass/_cirro.sass
@@ -94,6 +94,9 @@
 	border-bottom: 1px dotted
 	background: white
 
+#about
+	margin-top: 0 !important
+
 #bg-slider
 	position: fixed
 	top: 0
@@ -105,6 +108,11 @@
 	z-index: 300
 	img
 		width: 100%
+
+#start-section
+	height: 100%
+	width: 100%
+	display: block
 
 #main-content
 	position: absolute
