--- a/sites/all/themes/clim/css/main.css
+++ b/sites/all/themes/clim/css/main.css
@@ -1603,8 +1603,12 @@ a.label:hover, a.badge:hover { color: white; text-decoration: none; cursor: poin
 
 .content-section { height: 1200px; margin: 500px 0; border-bottom: 1px dotted; background: white; }
 
+#about { margin-top: 0 !important; }
+
 #bg-slider { position: fixed; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; background-color: black; z-index: 300; }
 #bg-slider img { width: 100%; }
+
+#start-section { height: 100%; width: 100%; display: block; }
 
 #main-content { position: absolute; height: 100%; width: 100%; display: block; z-index: 500; }
 
