--- a/sites/all/themes/clim/sass/_cirro.sass
+++ b/sites/all/themes/clim/sass/_cirro.sass
@@ -86,16 +86,34 @@
 	top: 20px
 	left: 20px
 	z-index: 600
+	ul
+		list-style: none
+		margin: 0
+		li 
+			margin-bottom: 15px
+			a
+				color: black
+				font-weight: bold
+				text-transform: uppercase
+				&.active
 
 
-.content-section
+
+article.content-section
 	height: 1200px
-	margin: 500px 0 
-	border-bottom: 1px dotted
+	margin-bottom: 500px
+	margin-top: -12px 
 	background: white
 
+section img.slice
+	width: 100%
+
 #about
-	margin-top: 0 !important
+	margin-top: -150px
+	.slice-wrap
+		height: 195px
+		overflow: hidden
+
 
 #bg-slider
 	position: fixed
