--- a/sites/all/themes/clim/css/main.css
+++ b/sites/all/themes/clim/css/main.css
@@ -94,7 +94,7 @@ sup { position: relative; font-size: 75%; line-height: 0; vertical-align: baseli
 
 sub { bottom: -0.25em; }
 
-img { width: auto\9; height: auto; max-width: 100%; vertical-align: middle; border: 0; -ms-interpolation-mode: bicubic; }
+img { width: auto; height: auto; max-width: 100%; vertical-align: middle; border: 0; -ms-interpolation-mode: bicubic; }
 
 #map_canvas img { max-width: none; }
 
@@ -1600,10 +1600,16 @@ a.label:hover, a.badge:hover { color: white; text-decoration: none; cursor: poin
 .page-user #forgot { font-size: 12px; font-weight: 300; }
 
 #main-menu { position: fixed; top: 20px; left: 20px; z-index: 600; }
+#main-menu ul { list-style: none; margin: 0; }
+#main-menu ul li { margin-bottom: 15px; }
+#main-menu ul li a { color: black; font-weight: bold; text-transform: uppercase; }
 
-.content-section { height: 1200px; margin: 500px 0; border-bottom: 1px dotted; background: white; }
+article.content-section { height: 1200px; margin-bottom: 500px; margin-top: -12px; background: white; }
 
-#about { margin-top: 0 !important; }
+section img.slice { width: 100%; }
+
+#about { margin-top: -150px; }
+#about .slice-wrap { height: 195px; overflow: hidden; }
 
 #bg-slider { position: fixed; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; background-color: black; z-index: 300; }
 #bg-slider img { width: 100%; }
