--- a/sites/all/themes/clim/sass/_variables.sass
+++ b/sites/all/themes/clim/sass/_variables.sass
@@ -2,21 +2,25 @@
 // ----------------------------------------------------------------------------
 $grayDarker: #222222 !default
 $grayDark: #333333 !default
-$gray: #555555 !default
 $grayLight: #999999 !default
 $grayLighter: #eeeeee !default
-$bg: #EDEDEF 
+$bg: black
 $blue: #006DCC
 $lightBlue: #49AFCD
 $green: #1FB173
 $red: #EE2B2E
 $orange: #ED5B25
 
+TAXI
+$gray: #666
+$grayLight: #EDEDED
+$yellow: #FFFF00
+
 
 
 // Scaffolding
 // ----------------------------------------------------------------------------
-$bodyBackground: white !default
+$bodyBackground: black !default
 $textColor: $grayDark !default
 $containerPadding: 20px 0 80px 0
 $fluidContainerPadding: 0 20px
@@ -37,13 +41,14 @@ $underlineStyle: 1px solid
 
 // Typography
 // ----------------------------------------------------------------------------
-$baseFontSize: 13px !default
+$baseFontSize: 15px !default
 $baseFontFamily: "Helvetica Neue", Helvetica, Arial, sans-serif !default
-$baseLineHeight: 18px !default
+$baseLineHeight: 1.6em !default
 $altFontFamily: Georgia, "Times New Roman", Times, serif !default
-$headingsFontFamily: inherit !default
+$monospaceFontFamily: "Courier New", monospace
+$headingsFontFamily: "Helvetica Neue", Helvetica, Arial, sans-serif !default
 $headingsFontWeight: bold !default
-$headingsColor: inherit !default
+$headingsColor: black !default
 $headingsSmallColor: $grayLight
 
 
