--- a/sites/all/themes/clim/css/main.css
+++ b/sites/all/themes/clim/css/main.css
@@ -1599,9 +1599,13 @@ a.label:hover, a.badge:hover { color: white; text-decoration: none; cursor: poin
 .page-user .container { margin-top: 20%; }
 .page-user #forgot { font-size: 12px; font-weight: 300; }
 
+.element-invisible { display: none; }
+
 ::selection { background: yellow; }
 
 ::-moz-selection { background: yellow; }
+
+#loader { position: fixed; z-index: 2000; top: 0; bottom: 0; left: 0; right: 0; height: 100%; width: 100%; background: url(../images/loader.gif) no-repeat center center black; }
 
 .slide { position: absolute; top: 0; left: 0; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; background-repeat: no-repeat; height: 100%; width: 100%; }
 
