--- a/sites/all/themes/clim/sass/_cirro.sass
+++ b/sites/all/themes/clim/sass/_cirro.sass
@@ -75,6 +75,9 @@
 	#forgot
 		font-size: 12px
 		font-weight: 300
+
+.element-invisible
+	display: none
 		
 ::selection
 	background: $yellow
@@ -84,6 +87,17 @@
 		
 //  Purrrdy Stuff
 // ----------------------------------------------------------------------------
+
+#loader
+	position: fixed
+	z-index: 2000
+	top: 0
+	bottom: 0
+	left: 0
+	right: 0
+	height: 100%
+	width: 100%
+	background: url(../images/loader.gif) no-repeat center center black
 
 .slide
 	position: absolute
