--- a/sites/all/themes/clim/sass/_cirro.sass
+++ b/sites/all/themes/clim/sass/_cirro.sass
@@ -168,3 +168,13 @@ section img.slice
 #map_canvas
 	min-height: 700px
 
+#companies
+	.buildings-wrapper
+		.building
+			width: 20%
+			float: left
+			h4
+				float: left
+			.companies-list
+				.company-link
+
