finished styling companies section

--- a/sites/all/themes/clim/sass/_cirro.sass
+++ b/sites/all/themes/clim/sass/_cirro.sass
@@ -183,12 +183,24 @@ section img.slice
 	min-height: 700px
 
 #companies
-	.buildings-wrapper
-		.building
-			width: 20%
-			float: left
-			h4
+	.content-section
+		overflow: hidden
+		.buildings-wrapper
+			width: 80%
+			min-width: 550px
+			padding-left: 15%
+			.building
+				width: 20%
 				float: left
-			.companies-list
-				.company-link
+				h4
+					float: left
+				.companies-list
+					.company-link
+						a
+							float: left
+							clear: both
+							color: black
+							p
+								text-align: left
+								padding-right: 6px
 
