--- a/sites/all/themes/clim/sass/_base.sass
+++ b/sites/all/themes/clim/sass/_base.sass
@@ -708,14 +708,11 @@ input
 	&[type="text"], &[type="password"], &[type="datetime"], &[type="datetime-local"], &[type="date"], &[type="month"], &[type="time"], &[type="week"], &[type="number"], &[type="email"], &[type="url"], &[type="search"], &[type="tel"], &[type="color"]
 		display: inline-block
 		height: 20px
-		padding: 4px 6px
+		padding: 10px 15px
 		margin-bottom: 9px
 		font-size: 14px
 		line-height: 20px
 		color: #555555
-		-webkit-border-radius: 3px
-		-moz-border-radius: 3px
-		border-radius: 3px
 
 .uneditable-input
 	display: inline-block
@@ -725,9 +722,6 @@ input
 	font-size: 14px
 	line-height: 20px
 	color: #555555
-	-webkit-border-radius: 3px
-	-moz-border-radius: 3px
-	border-radius: 3px
 
 input, textarea, .uneditable-input
 	width: 206px
@@ -747,7 +741,7 @@ textarea
 input
 	&[type="text"], &[type="password"], &[type="datetime"], &[type="datetime-local"], &[type="date"], &[type="month"], &[type="time"], &[type="week"], &[type="number"], &[type="email"], &[type="url"], &[type="search"], &[type="tel"], &[type="color"]
 		background-color: #ffffff
-		border: 1px solid #cccccc
+		border: 2px solid #FFF
 		-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075)
 		-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075)
 		box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075)
@@ -768,23 +762,14 @@ input
 	transition: border linear 0.2s, box-shadow linear 0.2s
 
 textarea:focus
-	border-color: rgba(82, 168, 236, 0.8)
+	border-color: $yellow
 	outline: 0
-	outline: thin dotted \9
-	// IE6-9
-	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6)
-	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6)
-	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6)
+
 
 input
 	&[type="text"]:focus, &[type="password"]:focus, &[type="datetime"]:focus, &[type="datetime-local"]:focus, &[type="date"]:focus, &[type="month"]:focus, &[type="time"]:focus, &[type="week"]:focus, &[type="number"]:focus, &[type="email"]:focus, &[type="url"]:focus, &[type="search"]:focus, &[type="tel"]:focus, &[type="color"]:focus
-		border-color: rgba(82, 168, 236, 0.8)
+		border-color: $yellow
 		outline: 0
-		outline: thin dotted \9
-		// IE6-9
-		-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6)
-		-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6)
-		box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6)
 
 .uneditable-input:focus
 	border-color: rgba(82, 168, 236, 0.8)
@@ -2243,70 +2228,42 @@ button.close
 input[type="submit"]
 	display: inline-block
 	*display: inline
-	padding: 4px 14px
+	padding: 10px 30px
 	margin-bottom: 0
 	*margin-left: .3em
 	font-size: 14px
 	line-height: 20px
 	*line-height: 20px
-	color: #333333
+	color: black
 	text-align: center
 	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75)
 	vertical-align: middle
 	cursor: pointer
-	background-color: #f5f5f5
-	*background-color: #e6e6e6
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#e6e6e6))
-	background-image: -webkit-linear-gradient(top, white, #e6e6e6)
-	background-image: -o-linear-gradient(top, white, #e6e6e6)
-	background-image: linear-gradient(to bottom, white, #e6e6e6)
-	background-image: -moz-linear-gradient(top, white, #e6e6e6)
-	background-repeat: repeat-x
-	border: 1px solid #bbbbbb
+	background-color: transparent
+	border: 1px solid black
 	*border: 0
-	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25)
-	border-color: #e6e6e6 #e6e6e6 #bfbfbf
+	border-color: black
 	border-bottom-color: #a2a2a2
-	-webkit-border-radius: 4px
-	-moz-border-radius: 4px
-	border-radius: 4px
-	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0)
-	filter: progid:dximagetransform.microsoft.gradient(enabled=false)
 	*zoom: 1
 	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05)
 	-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05)
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05)
-	&:hover, &:active, &.active, &.disabled, &[disabled]
-		color: #333333
-		background-color: #e6e6e6
-		*background-color: #d9d9d9
 	&:active, &.active
 		background-color: #cccccc \9
 	&:first-child
 		*margin-left: 0
 	&:hover
-		color: #333333
+		color: $yellow
+		border-color: $yellow
 		text-decoration: none
-		background-color: #e6e6e6
-		*background-color: #d9d9d9
-		// Buttons in IE7 don't get borders, so darken on hover
-		background-position: 0 -15px
 		-webkit-transition: background-position 0.1s linear
 		-moz-transition: background-position 0.1s linear
 		-o-transition: background-position 0.1s linear
 		transition: background-position 0.1s linear
 	&:focus
-		outline: thin dotted #333
-		outline: 5px auto -webkit-focus-ring-color
-		outline-offset: -2px
+		border-color: $yellow
 	&.active, &:active
-		background-color: #e6e6e6
-		background-color: #d9d9d9 \9
-		background-image: none
 		outline: 0
-		-webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05)
-		-moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05)
-		box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05)
 	&.disabled, &[disabled]
 		cursor: default
 		background-color: #e6e6e6
