--- a/sites/all/themes/clim/sass/_cirro.sass
+++ b/sites/all/themes/clim/sass/_cirro.sass
@@ -263,8 +263,22 @@ article.content-section
 		height: 400px
 		top: -200px
 
-#map_canvas
-	min-height: 700px
+#map
+	#map-info
+		margin-bottom: 100px
+		a
+			color: black
+	#map_canvas
+		min-height: 700px
+		margin: 0px auto
+	.tri-top
+		transform: rotate(-5deg)
+		-ms-transform: rotate(-5deg)
+		-moz-transform: rotate(-5deg)
+		-webkit-transform: rotate(-5deg)
+		-o-transform: rotate(-5deg)
+		height: 400px
+		top: 200px
 
 #social-btns
 	.social[data-icon]:before
