--- a/sites/all/themes/clim/css/main.css
+++ b/sites/all/themes/clim/css/main.css
@@ -83,7 +83,7 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 
 audio:not([controls]) { display: none; }
 
-html { font-size: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
+html { font-size: 100%; height: 100%; width: 100%; overflow: hidden; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
 
 a:focus { outline: thin dotted #333333; outline: 5px auto -webkit-focus-ring-color; outline-offset: -2px; }
 a:hover, a:active { outline: 0; }
@@ -120,7 +120,7 @@ textarea { overflow: auto; vertical-align: top; }
 
 .input-block-level { display: block; width: 100%; min-height: 30px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
-body { margin: 0; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 15px; line-height: 1.6em; color: #333333; background-color: black; }
+body { margin: 0; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 15px; font-weight: 300; line-height: 1.6em; color: #333333; background-color: black; }
 
 a { color: #006dcc; text-decoration: none; }
 a:hover { color: #004480; text-decoration: underline; }
@@ -265,7 +265,7 @@ h1, h2, h3, h4, h5, h6 { margin: 10px 0; font-family: "Helvetica Neue", Helvetic
 
 h1 small, h2 small, h3 small, h4 small, h5 small, h6 small { font-weight: normal; line-height: 1; color: #ededed; }
 
-h1 { font-size: 36px; line-height: 40px; margin-bottom: 50px; letter-spacing: 0.1em; }
+h1 { font-size: 36px; line-height: 40px; margin-bottom: 40px; letter-spacing: 0.1em; }
 
 h2 { font-size: 30px; line-height: 40px; }
 
@@ -981,7 +981,7 @@ table [class*=span], .row-fluid table [class*=span] { display: table-cell; float
 
 button.close { padding: 0; cursor: pointer; background: transparent; border: 0; -webkit-appearance: none; }
 
-.btn, input[type="submit"] { display: inline-block; *display: inline; padding: 10px 30px; margin-bottom: 0; *margin-left: 0.3em; font-size: 14px; line-height: 20px; *line-height: 20px; color: black; text-align: center; text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); vertical-align: middle; cursor: pointer; background-color: transparent; border: 1px solid black; *border: 0; border-color: black; border-bottom-color: #a2a2a2; *zoom: 1; -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); }
+.btn, input[type="submit"] { display: inline-block; *display: inline; padding: 15px 40px; margin-bottom: 0; *margin-left: 0.3em; font-size: 13px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.2em; line-height: 20px; *line-height: 20px; color: black; text-align: center; text-shadow: none; cursor: pointer; background-color: transparent; border: 1px solid black; *border: 0; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; *zoom: 1; }
 .btn:active, .btn.active, input[type="submit"]:active, input[type="submit"].active { background-color: #cccccc \9; }
 .btn:first-child, input[type="submit"]:first-child { *margin-left: 0; }
 .btn:hover, input[type="submit"]:hover { color: yellow; border-color: yellow; text-decoration: none; -webkit-transition: background-position 0.1s linear; -moz-transition: background-position 0.1s linear; -o-transition: background-position 0.1s linear; transition: background-position 0.1s linear; }
@@ -1003,8 +1003,6 @@ button.close { padding: 0; cursor: pointer; background: transparent; border: 0; 
 input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="button"].btn-block { width: 100%; }
 
 .btn-primary.active, .btn-warning.active, .btn-danger.active, .btn-success.active, .btn-info.active, .btn-inverse.active { color: rgba(255, 255, 255, 0.75); }
-
-.btn, input[type="submit"] { border-color: #c5c5c5; border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25); }
 
 .btn-primary { color: white; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); background-color: #006dcc; *background-color: #0044cc; background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc)); background-image: -webkit-linear-gradient(top, #0088cc, #0044cc); background-image: -o-linear-gradient(top, #0088cc, #0044cc); background-image: linear-gradient(to bottom, #0088cc, #0044cc); background-image: -moz-linear-gradient(top, #0088cc, #0044cc); background-repeat: repeat-x; border-color: #0044cc #0044cc #002a80; border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0); filter: progid:dximagetransform.microsoft.gradient(enabled=false); }
 .btn-primary:hover, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { color: white; background-color: #0044cc; *background-color: #003bb3; }
@@ -1574,6 +1572,8 @@ a.label:hover, a.badge:hover { color: white; text-decoration: none; cursor: poin
 
 @font-face { font-family: "EntypoSocial"; src: url("../fonts/entypo-social.eot"); src: url("../fonts/entypo-social.eot?#iefix") format("embedded-opentype"), url("../fonts/entypo-social.woff") format("woff"), url("../fonts/entypo-social.ttf") format("truetype"), url("../fonts/entypo-social.svg#EntypoRegular") format("svg"); font-weight: normal; font-style: normal; }
 
+hr { width: 40px; margin: 0 auto 40px auto; height: 3px; background: black; }
+
 .fixed { position: fixed; }
 
 .center { margin: 0 auto; }
@@ -1596,7 +1596,7 @@ a.label:hover, a.badge:hover { color: white; text-decoration: none; cursor: poin
 .loading-gif-element .medium { height: 20px; width: 20px; background: url(../images/loading_medium.gif) no-repeat center center; }
 .loading-gif-element .small { height: 10px; width: 10px; background: url(../images/loading_small.gif) no-repeat center center; }
 
-.tri { width: 120%; background: #ededed; position: relative; z-index: 300; left: -5%; }
+.tri { width: 150%; background: #ededed; position: relative; z-index: 300; left: -10%; }
 
 .page-user .form-item .description, .page-user label { display: none; }
 .page-user .container { margin-top: 20%; }
@@ -1618,15 +1618,16 @@ a.label:hover, a.badge:hover { color: white; text-decoration: none; cursor: poin
 
 #logo { position: fixed; top: 100px; left: 9%; width: 65px; z-index: 600; }
 
-#main-menu { position: fixed; top: 100px; right: 20px; z-index: 600; }
+#main-menu { position: fixed; top: 100px; right: 25px; z-index: 600; }
 #main-menu ul { list-style: none; margin: 0; }
 #main-menu ul li { margin-bottom: 15px; text-align: right; }
 #main-menu ul li a { color: black; font-size: 12px; font-weight: bold; text-transform: uppercase; }
 #main-menu ul li a.active { border-bottom: 2px solid; }
+#main-menu ul li a:hover { text-decoration: none; }
 
 article.content-section { padding: 100px 0; margin-bottom: 0; background: #ededed; position: relative; z-index: 400; }
 
-.body-text { font-family: "Courier New", monospace; width: 80%; margin: 0 auto; max-width: 600px; }
+.body-text { width: 80%; margin: 0 auto; max-width: 600px; }
 
 #bg-slider { position: fixed; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; background-color: black; z-index: 300; }
 #bg-slider img { width: 100%; }
@@ -1654,8 +1655,9 @@ article.content-section { padding: 100px 0; margin-bottom: 0; background: #edede
 #map #map_canvas { min-height: 700px; margin: 0px auto; }
 #map .tri-top { transform: rotate(-5deg); -ms-transform: rotate(-5deg); -moz-transform: rotate(-5deg); -webkit-transform: rotate(-5deg); -o-transform: rotate(-5deg); height: 400px; top: 200px; }
 
-#social-btns .social[data-icon]:before { font-family: "EntypoSocial"; font-size: 70px; font-weight: normal; content: attr(data-icon); color: black; }
-#social-btns .social[data-icon]:before:hover { color: yellow; }
+#social-btns a:hover { text-decoration: none; }
+#social-btns a:hover .social[data-icon]:before { color: #cd1076; }
+#social-btns .social[data-icon]:before { font-family: "EntypoSocial"; font-size: 40px; font-weight: normal; content: attr(data-icon); color: black; margin: 0 10px; }
 
 .page-user .login-wrap { width: 300px; margin: 100px auto 0 auto; }
 .page-user .login-wrap input[type="text"], .page-user .login-wrap input[type="password"] { width: 88%; }
@@ -1858,7 +1860,12 @@ article.content-section { padding: 100px 0; margin-bottom: 0; background: #edede
   input.span3, textarea.span3, .uneditable-input.span3 { width: 152px; }
   input.span2, textarea.span2, .uneditable-input.span2 { width: 90px; }
   input.span1, textarea.span1, .uneditable-input.span1 { width: 28px; } }
-@media (max-width: 767px) { .container-fluid { padding: 0; }
+@media (max-width: 767px) { #logo { left: 10px; top: 20px; }
+  #main-menu { top: 20px; right: 10px; }
+  #about .tri-top, #companies .tri-top, #contact .tri-top, #map .tri-top { height: 200px; bottom: -100px; }
+  #about .tri-bottom, #companies .tri-bottom, #contact .tri-bottom { height: 200px; top: -100px; }
+  article.content-section { padding: 20px 0; }
+  .container-fluid { padding: 0; }
   .dl-horizontal dt { float: none; width: auto; clear: none; text-align: left; }
   .dl-horizontal dd { margin-left: 0; }
   .container { width: auto; }
@@ -1873,14 +1880,6 @@ article.content-section { padding: 100px 0; margin-bottom: 0; background: #edede
   .controls-row [class*="span"] + [class*="span"] { margin-left: 0; }
   .modal { position: fixed; top: 20px; right: 20px; left: 20px; width: auto; margin: 0; }
   .modal.fade.in { top: auto; } }
-@media (max-width: 480px) { .nav-collapse { -webkit-transform: translate3d(0, 0, 0); }
-  .page-header h1 small { display: block; line-height: 20px; }
-  input[type="checkbox"], input[type="radio"] { border: 1px solid #cccccc; }
-  .form-horizontal .control-label { float: none; width: auto; padding-top: 0; text-align: left; }
-  .form-horizontal .controls { margin-left: 0; }
-  .form-horizontal .control-list { padding-top: 0; }
-  .form-horizontal .form-actions { padding-right: 10px; padding-left: 10px; }
-  .modal { top: 10px; right: 10px; left: 10px; }
-  .modal-header .close { padding: 10px; margin: -10px; }
-  .carousel-caption { position: static; } }
-@media (max-width: 979px) { body { padding-top: 0; } }
+@media (max-width: 480px) { .slide-window { height: 250px; } }
+@media only screen and (orientation: portrait) and (device-width: 320px), (device-width: 768px) { .slide { -webkit-background-size: auto 100%; } }
+@media only screen and (orientation: landscape) and (device-width: 320px), (device-width: 768px) { .slide { -webkit-background-size: 100% auto; } }
