--- a/sites/all/themes/clim/css/responsive.css
+++ b/sites/all/themes/clim/css/responsive.css
@@ -189,7 +189,12 @@
   input.span3, textarea.span3, .uneditable-input.span3 { width: 152px; }
   input.span2, textarea.span2, .uneditable-input.span2 { width: 90px; }
   input.span1, textarea.span1, .uneditable-input.span1 { width: 28px; } }
-@media (max-width: 767px) { .container-fluid { padding: 0; }
+@media (max-width: 767px) { #logo { left: 10px; top: 20px; }
+  #main-menu { top: 20px; right: 10px; }
+  #about .tri-top, #companies .tri-top, #contact .tri-top, #map .tri-top { height: 200px; bottom: -100px; }
+  #about .tri-bottom, #companies .tri-bottom, #contact .tri-bottom { height: 200px; top: -100px; }
+  article.content-section { padding: 20px 0; }
+  .container-fluid { padding: 0; }
   .dl-horizontal dt { float: none; width: auto; clear: none; text-align: left; }
   .dl-horizontal dd { margin-left: 0; }
   .container { width: auto; }
@@ -204,14 +209,6 @@
   .controls-row [class*="span"] + [class*="span"] { margin-left: 0; }
   .modal { position: fixed; top: 20px; right: 20px; left: 20px; width: auto; margin: 0; }
   .modal.fade.in { top: auto; } }
-@media (max-width: 480px) { .nav-collapse { -webkit-transform: translate3d(0, 0, 0); }
-  .page-header h1 small { display: block; line-height: 20px; }
-  input[type="checkbox"], input[type="radio"] { border: 1px solid #cccccc; }
-  .form-horizontal .control-label { float: none; width: auto; padding-top: 0; text-align: left; }
-  .form-horizontal .controls { margin-left: 0; }
-  .form-horizontal .control-list { padding-top: 0; }
-  .form-horizontal .form-actions { padding-right: 10px; padding-left: 10px; }
-  .modal { top: 10px; right: 10px; left: 10px; }
-  .modal-header .close { padding: 10px; margin: -10px; }
-  .carousel-caption { position: static; } }
-@media (max-width: 979px) { body { padding-top: 0; } }
+@media (max-width: 480px) { .slide-window { height: 250px; } }
+@media only screen and (orientation: portrait) and (device-width: 320px), (device-width: 768px) { .slide { -webkit-background-size: auto 100%; } }
+@media only screen and (orientation: landscape) and (device-width: 320px), (device-width: 768px) { .slide { -webkit-background-size: 100% auto; } }
