--- a/sites/all/themes/clim/sass/_base.sass
+++ b/sites/all/themes/clim/sass/_base.sass
@@ -25,6 +25,9 @@ audio:not([controls])
 
 html
 	font-size: 100%
+	height: 100%
+	width: 100%
+	overflow: hidden
 	-webkit-text-size-adjust: 100%
 	-ms-text-size-adjust: 100%
 
@@ -127,6 +130,7 @@ body
 	margin: 0
 	font-family: $baseFontFamily
 	font-size: $baseFontSize
+	font-weight: 300
 	line-height: $baseLineHeight
 	color: $textColor
 	background-color: $bodyBackground
@@ -467,7 +471,7 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small
 h1
 	font-size: 36px
 	line-height: 40px
-	margin-bottom: 50px
+	margin-bottom: 40px
 	letter-spacing: 0.1em
 
 h2
@@ -2228,26 +2232,24 @@ button.close
 input[type="submit"]
 	display: inline-block
 	*display: inline
-	padding: 10px 30px
+	padding: 15px 40px
 	margin-bottom: 0
 	*margin-left: .3em
-	font-size: 14px
+	font-size: 13px
+	font-weight: 600
+	text-transform: uppercase
+	letter-spacing: 0.2em
 	line-height: 20px
 	*line-height: 20px
 	color: black
 	text-align: center
-	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75)
-	vertical-align: middle
+	text-shadow: none
 	cursor: pointer
 	background-color: transparent
 	border: 1px solid black
 	*border: 0
-	border-color: black
-	border-bottom-color: #a2a2a2
+	+border-radius(3px)
 	*zoom: 1
-	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05)
-	-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05)
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05)
 	&:active, &.active
 		background-color: #cccccc \9
 	&:first-child
@@ -2313,11 +2315,6 @@ input
 
 .btn-primary.active, .btn-warning.active, .btn-danger.active, .btn-success.active, .btn-info.active, .btn-inverse.active
 	color: rgba(255, 255, 255, 0.75)
-
-.btn,
-input[type="submit"]
-	border-color: #c5c5c5
-	border-color: rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.15) rgba(0, 0, 0, 0.25)
 
 .btn-primary
 	color: #ffffff
