--- a/sites/all/themes/clim/sass/responsive.sass
+++ b/sites/all/themes/clim/sass/responsive.sass
@@ -601,6 +601,8 @@
 @media (max-width: 480px)
 	.slide-window
 		height: 250px
+	#logo
+		width: 62px
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 768px) and (orientation: portrait) 
 	.slide
