styled h3 for about section increased logo size

--- a/sites/all/themes/clim/sass/_cirro.sass
+++ b/sites/all/themes/clim/sass/_cirro.sass
@@ -142,7 +142,7 @@ hr
 	position: fixed
 	top: 100px
 	left: 9%
-	width: 92px
+	width: 112px
 	z-index: 600
 
 #main-menu 
@@ -177,6 +177,13 @@ article.content-section
 	width: 80%
 	margin: 0 auto
 	max-width: 600px
+	h3
+		font-size: 21px
+		margin-top: 25px
+		margin-bottom: 0
+	&:first-child
+		margin-top: 10px
+		margin-bottom: 0
 
 #bg-slider
 	position: fixed
