--- a/sites/all/themes/clim/css/main.css
+++ b/sites/all/themes/clim/css/main.css
@@ -1616,7 +1616,7 @@ hr { width: 40px; margin: 0 auto 40px auto; height: 3px; background: black; }
 
 .slide { position: absolute; top: 0; left: 0; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; background-repeat: no-repeat; height: 100%; width: 100%; }
 
-#logo { position: fixed; top: 100px; left: 9%; width: 92px; z-index: 600; }
+#logo { position: fixed; top: 100px; left: 9%; width: 112px; z-index: 600; }
 
 #main-menu { position: fixed; top: 100px; right: 25px; z-index: 600; }
 #main-menu ul { list-style: none; margin: 0; }
@@ -1628,6 +1628,8 @@ hr { width: 40px; margin: 0 auto 40px auto; height: 3px; background: black; }
 article.content-section { padding: 100px 0; margin-bottom: 0; background: #ededed; position: relative; z-index: 400; }
 
 .body-text { width: 80%; margin: 0 auto; max-width: 600px; }
+.body-text h3 { font-size: 21px; margin-top: 25px; margin-bottom: 0; }
+.body-text:first-child { margin-top: 10px; margin-bottom: 0; }
 
 #bg-slider { position: fixed; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; background-color: black; z-index: 300; }
 #bg-slider img { width: 100%; }
