--- a/sites/all/themes/clim/css/main.css
+++ b/sites/all/themes/clim/css/main.css
@@ -1664,9 +1664,10 @@ article.content-section { padding: 100px 0; margin-bottom: 0; background: #edede
 #map #map_canvas { min-height: 700px; margin: 0px auto; }
 #map .tri-top { transform: rotate(-5deg); -ms-transform: rotate(-5deg); -moz-transform: rotate(-5deg); -webkit-transform: rotate(-5deg); -o-transform: rotate(-5deg); height: 400px; top: 200px; }
 
-#social-btns .social[data-icon]:before { font-family: "EntypoSocial"; font-size: 40px; font-weight: normal; content: attr(data-icon); color: black; margin: 0 10px; }
-#social-btns a:hover { text-decoration: none; }
-#social-btns a:hover .social[data-icon]:before { color: #cd1076; }
+#social { position: fixed; bottom: 0; right: 25px; bottom: 25px; z-index: 1000; }
+#social #social-btns .social[data-icon]:before { font-family: "EntypoSocial"; font-size: 30px; font-weight: normal; content: attr(data-icon); color: black; margin: 0 10px; }
+#social #social-btns a:hover { text-decoration: none; }
+#social #social-btns a:hover .social[data-icon]:before { color: #cd1076; }
 
 .page-user .login-wrap { width: 300px; margin: 100px auto 0 auto; }
 .page-user .login-wrap input[type="text"], .page-user .login-wrap input[type="password"] { width: 88%; }
