--- a/sites/all/themes/clim/sass/responsive.sass
+++ b/sites/all/themes/clim/sass/responsive.sass
@@ -529,6 +529,11 @@
 	#main-menu
 		top: 20px
 		right: 10px
+	#social
+		right: 10px
+		a		
+		[data-icon]:before
+			font-size: 23px			
 	#about .tri-top,
 	#companies .tri-top,
 	#contact .tri-top,
@@ -601,6 +606,18 @@
 @media (max-width: 480px)
 	.slide-window
 		height: 250px
+	#main-menu
+		ul
+			li
+				margin-bottom: 3px
+				a
+					font-size: 9px
+	#social
+		right: 4px
+		.social-btn
+			float: none
+			[data-icon]:before
+				font-size: 22px
 	#logo
 		width: 62px
 
